last push for today

--- a/index.html
+++ b/index.html
@@ -241,9 +241,9 @@
                             </a>
                         </div>
                     </div>
-                   
+
                 </div>
-                 <hr class="hr2 mt-5 hr-animate">
+                <hr class="hr2 mt-5 hr-animate">
             </div>
         </section>
 
@@ -321,7 +321,7 @@
             <div class="container px-5 mt-5  mb-5">
                 <div class="row gx-5">
                     <div class="col-12 col-lg-6">
-                        <h1 class="fw-bolder">TIN TỨC</h1>
+                        <h1 class="">TIN TỨC</h1>
                         <hr class="hr2 hr-animate">
                         <p class="lead fw-normal mb-5">Cập nhật thông tin mới nhất từ chúng tôi</p>
                     </div>
@@ -404,7 +404,7 @@
 
                 <!-- Tiêu đề -->
                 <div class="text-center mb-5">
-                    <h1 class="fw-bolder">ĐƠN VỊ ĐẦU TƯ</h1>
+                    <h1>ĐƠN VỊ ĐẦU TƯ</h1>
                 </div>
 
                 <!-- Logo -->
@@ -447,8 +447,7 @@
                     <div class="input-group mb-2">
                         <input class="form-control" type="text" placeholder="Email address..."
                             aria-label="Email address..." aria-describedby="button-newsletter" />
-                        <button class="btn btn-secondary" id="button-newsletter" type="button">Sign
-                            up</button>
+                        <button class="btn btn-secondary" id="button-newsletter" type="button">Sign up</button>
                     </div>
                 </div>
             </div>
@@ -473,7 +472,8 @@
                                 phần
                                 vào sự phát triển của đất nước.</span>
                             <div class="d-grid mt-3">
-                                <a class="btn btn-secondary btn-sm px-4 me-sm-3" href="#">
+                                <a class="btn btn-secondary btn-sm px-4 me-sm-3" href="../img/HoSoDoanhNghiep.pdf"
+                                    download="HoSoDoanhNghiep.pdf">
                                     Tải hồ sơ doanh nghiệp
                                     <i class="bi bi-arrow-bar-down" style="margin-left: 8px;"></i>
                                 </a>
@@ -493,10 +493,20 @@
                             <li><strong>Điện thoại:</strong> 0919 179 229</li>
                             <li><strong>Email:</strong> info@saigongroup.vn</li>
                         </ul>
+
+                        <div class="d-flex gap-3 ps-5">
+                            <a href="https://www.facebook.com/saigongroup" target="_blank" class="social-btn fb-btn">
+                                <i class="bi bi-facebook"></i>
+                            </a>
+                            <a href="https://zalo.me/0837137697" target="_blank" class="social-btn zalo-btn">
+                                <img src="../img/Zalo_icon.webp"
+                                    alt="Zalo" class="zalo-icon">
+                            </a>
+                        </div>
                     </div>
                 </div>
 
-                <!-- Card nav (ẩn trên mobile) -->
+                <!-- Card nav hide in mobile! -->
                 <div class=" col-lg-4 d-none d-lg-block">
                     <div class="p-5 text-white">
                         <ul class="list-unstyled mb-4 navbar-nav">
@@ -517,7 +527,6 @@
                 </div>
             </div>
         </div>
-
 
         <div class="container px-5">
             <div class="row align-items-center justify-content-between flex-column flex-sm-row">
