--- a/port-geo-info.html
+++ b/port-geo-info.html
@@ -156,7 +156,8 @@
                     <div class="tab-pane fade show active" id="luong" role="tabpanel">
                         <div class="row align-items-center g-4">
                             <div class="col-lg-6">
-                                <img src="../img/TG-bigmap.jpg" alt="Thông tin luồng" class="img-fluid rounded shadow-sm">
+                                <img src="../img/TG-bigmap.jpg" alt="Thông tin luồng"
+                                    class="img-fluid rounded shadow-sm">
                             </div>
                             <div class="col-lg-6">
                                 <p class="text-muted">
@@ -177,7 +178,8 @@
                     <div class="tab-pane fade" id="bo" role="tabpanel">
                         <div class="row align-items-center g-4">
                             <div class="col-lg-6">
-                                <img src="../img/TG-traffic-map.jpg" alt="Tuyến đường bộ" class="img-fluid rounded shadow-sm">
+                                <img src="../img/TG-traffic-map.jpg" alt="Tuyến đường bộ"
+                                    class="img-fluid rounded shadow-sm">
                             </div>
                             <div class="col-lg-6">
                                 <ul class="location-list ">
@@ -198,11 +200,12 @@
                         </div>
                     </div>
 
-                    <!-- Tab 3 -->
+                    <!-- Tab 3 done nha!-->
                     <div class="tab-pane fade" id="thuy" role="tabpanel">
                         <div class="row align-items-center g-4">
                             <div class="col-lg-6">
-                                <img src="../img/TG-port-map.jpg" alt="Tuyến đường thủy" class="img-fluid rounded shadow-sm">
+                                <img src="../img/TG-port-map.jpg" alt="Tuyến đường thủy"
+                                    class="img-fluid rounded shadow-sm">
                             </div>
                             <div class="col-lg-6">
                                 <ul class="location-list">
