--- a/index.html
+++ b/index.html
@@ -24,61 +24,42 @@
 
 <body class="d-flex flex-column h-100">
     <main class="flex-shrink-0">
+         <nav id="mainNav" class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <div class="container px-5">
+                    <a class="navbar-brand text-bolder" href="index.html">Cảng biển Gò Công</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" id="navbarDropdownPortfolio" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Thông tin cảng</a>
+                                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio">
+                                    <li><a class="dropdown-item" href="port-geo-info.html">Vị trí địa lý</a></li>
+                                    <li><a class="dropdown-item" href="#">Quy mô dự án</a></li>
+                                    <li><a class="dropdown-item" href="port-geo-size.html">Công nghệ vận hành</a></li>
 
-        <!-- Nav bar start here!-->
-        <nav class="navbar navbar-expand-xl navbar-dark bg-dark text-bolder fixed-top nav-compact">
-            <div class="container px-5 ">
-                <a class="navbar-brand" href="index.html">CẢNG BIỂN GÒ CÔNG</a>
-
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                    <ul class="navbar-nav mb-2 mb-xl-0">
-                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">Thông tin cảng</a>
-                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
-                                <li><a class="dropdown-item" href="port-geo-info.html">Vị trí địa lý</a></li>
-                                <li><a class="dropdown-item" href="#">Quy mô dự án</a></li>
-                                <li><a class="dropdown-item" href="#">Công nghệ vận hành</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">Phân khu cảng</a>
-                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
-                                <li><a class="dropdown-item" href="">Khu bến cảng và bãi container</a></li>
-                                <li><a class="dropdown-item" href="">Khu dịch vụ logistics</a></li>
-                                <li><a class="dropdown-item" href="">Khu công nghiệp công nghệ cao</a></li>
-                                <li><a class="dropdown-item" href="">Khu thương mại dịch vụ</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item"><a class="nav-link" href="">Đơn vị đối tác</a></li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdownNews" href="#" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">Tin tức</a>
-                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownNews">
-                                <li><a class="dropdown-item" href="">Tin tức dự án</a></li>
-                                <li><a class="dropdown-item" href="">Tin tức tiến độ</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item"><a class="nav-link" href="">Thư viện</a></li>
-                        <li class="nav-item"><a class="nav-link" href="">Liên hệ</a></li>
-                    </ul>
+                                </ul>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" id="navbarDropdownPortfolio" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Phân khu cảng</a>
+                                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio">
+                                    <li><a class="dropdown-item" href="#">Khu bên cảng và bãi container</a></li>
+                                    <li><a class="dropdown-item" href="#">Khu dịch vụ logistics</a></li>
+                                    <li><a class="dropdown-item" href="#">Khu công nghiệp công nghệ cao</a></li>
+                                    <li><a class="dropdown-item" href="#">Khu thương mại dịch vụ</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-item"><a class="nav-link" href="#">Đơn vị đối tác</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Tin tức</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Thư viện</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Liên hệ</a></li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-        </nav>
-        <!-- Navbar end -->
-
+            </nav>
 
         <!-- Header start here! -->
-        <header class="hero-header position-relative hero-section">
-            <!-- Slider nền -->
-            <div class="slider-wrapper">
+        <header class="hero-header position-relative hero-section"> -->
+        <div class="slider-wrapper">
                 <div class="slider">
                     <img src="../img/container.jpg" alt="slide 1">
                     <img src="../img/final.png" alt="slide 2">
@@ -140,8 +121,8 @@
                         </a>
                     </div>
                     <div class="col-lg-7">
-                    <img class="img-fluid2 my-5" src="../img/map_GC.jpg" loading="lazy" decoding="async"
-                        alt="Ban do cang Go Cong" draggable="false">
+                        <img class="img-fluid2 my-5" src="../img/map_GC.jpg" loading="lazy" decoding="async"
+                            alt="Ban do cang Go Cong" draggable="false">
                     </div>
                 </div>
             </div>
@@ -291,10 +272,10 @@
                 </div>
 
             </div>
-            
-                <div class="image-wrapper">
-                    <img src="../img/final.png" alt="Sơ đồ quy hoạch cảng">
-                </div>
+
+            <div class="image-wrapper">
+                <img src="../img/final.png" alt="Sơ đồ quy hoạch cảng">
+            </div>
         </section>
 
 
