--- a/port-geo-info.html
+++ b/port-geo-info.html
@@ -22,48 +22,39 @@
 <body class="d-flex flex-column">
     <main class="flex-shrink-0">
         <!-- Navigation done!-->
-        <nav class="navbar navbar-expand-xl navbar-dark bg-dark text-bolder fixed-top nav-compact">
-            <div class="container px-5 ">
-                <a class="navbar-brand" href="index.html">CẢNG BIỂN GÒ CÔNG</a>
-
+        <nav id="mainNav" class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container px-5">
+                <a class="navbar-brand text-bolder" href="index.html">Cảng biển Gò Công</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                    <ul class="navbar-nav mb-2 mb-xl-0">
+                    aria-expanded="false" aria-label="Toggle navigation"><span
+                        class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button"
+                            <a class="nav-link dropdown-toggle" id="navbarDropdownPortfolio" href="#" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">Thông tin cảng</a>
-                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio">
                                 <li><a class="dropdown-item" href="port-geo-info.html">Vị trí địa lý</a></li>
                                 <li><a class="dropdown-item" href="#">Quy mô dự án</a></li>
-                                <li><a class="dropdown-item" href="#">Công nghệ vận hành</a></li>
+                                <li><a class="dropdown-item" href="port-geo-size.html">Công nghệ vận hành</a></li>
+
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button"
+                            <a class="nav-link dropdown-toggle" id="navbarDropdownPortfolio" href="#" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">Phân khu cảng</a>
-                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
-                                <li><a class="dropdown-item" href="">Khu bến cảng và bãi container</a></li>
-                                <li><a class="dropdown-item" href="">Khu dịch vụ logistics</a></li>
-                                <li><a class="dropdown-item" href="">Khu công nghiệp công nghệ cao</a></li>
-                                <li><a class="dropdown-item" href="">Khu thương mại dịch vụ</a></li>
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio">
+                                <li><a class="dropdown-item" href="#">Khu bên cảng và bãi container</a></li>
+                                <li><a class="dropdown-item" href="#">Khu dịch vụ logistics</a></li>
+                                <li><a class="dropdown-item" href="#">Khu công nghiệp công nghệ cao</a></li>
+                                <li><a class="dropdown-item" href="#">Khu thương mại dịch vụ</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="">Đơn vị đối tác</a></li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdownNews" href="#" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">Tin tức</a>
-                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownNews">
-                                <li><a class="dropdown-item" href="">Tin tức dự án</a></li>
-                                <li><a class="dropdown-item" href="">Tin tức tiến độ</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item"><a class="nav-link" href="">Thư viện</a></li>
-                        <li class="nav-item"><a class="nav-link" href="">Liên hệ</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Đơn vị đối tác</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Tin tức</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Thư viện</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Liên hệ</a></li>
                     </ul>
                 </div>
             </div>
@@ -91,10 +82,12 @@
                     </div>
                     <div class="col-lg-5 col-md-6 col-12">
                         <p class="plan-desc">
-                            Vận dụng điều kiện tự nhiên thuận lợi để hình thành và phát triển một cảng quốc tế
-                            có quy mô tiếp nhận các tàu có tải trọng từ 20.000 – 70.000 DWT; công suất cảng giai
-                            đoạn hoàn thiện đạt đến 18,0 triệu T/năm và có thể nâng cao được công suất hàng qua
-                            cảng khi có nhu cầu xuất nhập hàng hóa tăng.
+                            Khu vực quy hoạch Cảng tổng hợp Gò Công được xác định là cảng cửa ngõ, đầu
+                            mối của tỉnh Tiền Giang, phục vụ cho nhu cầu phát triển kinh tế xã hội của tỉnh và vùng phụ
+                            cận; Là cảng hàng hóa tổng hợp phục vụ các khu công nghiệp, khu sản xuất chế biến trên
+                            địa bàn tỉnh của nhà đầu tư về xây dựng khu chế biến công nghệ cao sản phẩm nông
+                            nghiệp. Là cảng hàng hóa tập trung thu gom, phân phối, 
+                            chuyển tải hàng hóa phục vụ xuất nhập khẩu.
                         </p>
                         <p class="plan-desc">
                             Thúc đẩy giao lưu hàng hóa với các nước thuộc tiểu vùng sông Mê Kông. Tăng khối
