--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                                 <a class="nav-link dropdown-toggle" id="navbarDropdownPortfolio" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Thông tin cảng</a>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio">
                                     <li><a class="dropdown-item" href="port-geo-info.html">Vị trí địa lý</a></li>
-                                    <li><a class="dropdown-item" href="#">Quy mô dự án</a></li>
-                                    <li><a class="dropdown-item" href="port-geo-size.html">Công nghệ vận hành</a></li>
+                                    <li><a class="dropdown-item" href="port-geo-size.html">Quy mô dự án</a></li>
+                                    <li><a class="dropdown-item" href="port-geo-tech.html">Công nghệ vận hành</a></li>
 
                                 </ul>
                             </li>
