--- a/port-geo-tech.html
+++ b/port-geo-tech.html
@@ -36,8 +36,8 @@
                                 data-bs-toggle="dropdown" aria-expanded="false">Thông tin cảng</a>
                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio">
                                 <li><a class="dropdown-item" href="port-geo-info.html">Vị trí địa lý</a></li>
-                                <li><a class="dropdown-item" href="#">Quy mô dự án</a></li>
-                                <li><a class="dropdown-item" href="port-geo-size.html">Công nghệ vận hành</a></li>
+                                <li><a class="dropdown-item" href="port-geo-size.html">Quy mô dự án</a></li>
+                                <li><a class="dropdown-item" href="port-geo-tech.html">Công nghệ vận hành</a></li>
 
                             </ul>
                         </li>
@@ -60,18 +60,22 @@
             </div>
         </nav>
 
+        <!-- Hero banner -->
         <section class="hero-section text-start justify-content-start">
             <div class="hero-background">
-                <img src="../img/final.png" alt="Hạ tầng & Trang thiết bị" class="hero-image">
+                <img src="../img/final.png" alt="Công nghệ vận hành" class="hero-image">
                 <div class="hero-overlay"></div>
             </div>
 
-            <div class="hero-textbox text-start" style="margin-left: 10%;">
+            <div class="hero-textbox">
                 <h1 class="hero-title text-white text-bolder">Công nghệ vận hành</h1>
                 <p class="hero-subtitle">Đầu tư xây dựng cảng tổng hợp Gò Công – Tiền Giang</p>
+                <div class="hero-line"></div>
             </div>
         </section>
 
+
+        <!-- First info section -->
         <section class="section-plan py-5 text-start">
             <div class="container px-4">
                 <div class="row justify-content-center align-items-center g-5">
@@ -86,7 +90,7 @@
 
                     <!-- Text -->
                     <div class="col-lg-6 col-md-10 col-12">
-                        <h1 class="mb-3 fw-bold">Mục tiêu của dự án</h1>
+                        <h1 class="mb-3" style="color: #cca570;">Năng lực khai thác cảng</h1>
                         <p class="plan-desc mb-3">
                             Vận dụng điều kiện tự nhiên thuận lợi để hình thành và phát triển một cảng quốc tế
                             có quy mô tiếp nhận các tàu có tải trọng từ 20.000 – 70.000 DWT; công suất cảng giai
@@ -112,9 +116,10 @@
             <div class="image-wrapper">
                 <section class="section-facilities py-5 text-start">
                     <div class="container">
-                        <h1 class="text-center mb-4">Cơ sở vật chất & Trang thiết bị</h1>
+                        <h1 class="text-center mb-4" style="color: #cca570;">Cơ sở vật chất & Trang thiết bị</h1>
                         <p class="plan-desc text-center">
-                            Thông tin chi tiết về hạ tầng và thiết bị khai thác cảng Gò Công – Tiền Giang.
+                            Cảng Gò Công được đầu tư đồng bộ với hạ tầng quy mô lớn và thiết bị hiện đại, sẵn sàng đáp
+                            ứng mọi nhu cầu khai thác hàng hóa.
                         </p>
 
                         <!-- Tabs -->
@@ -233,8 +238,8 @@
             </div>
         </section>
 
-
-
+        <!-- Line break -->
+        <div class="section-divider-full"> </div>
 
         <!-- What's next -->
         <section class=" section-recommend">
