--- a/port-geo-info.html
+++ b/port-geo-info.html
@@ -36,8 +36,8 @@
                                 data-bs-toggle="dropdown" aria-expanded="false">Thông tin cảng</a>
                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio">
                                 <li><a class="dropdown-item" href="port-geo-info.html">Vị trí địa lý</a></li>
-                                <li><a class="dropdown-item" href="#">Quy mô dự án</a></li>
-                                <li><a class="dropdown-item" href="port-geo-size.html">Công nghệ vận hành</a></li>
+                                <li><a class="dropdown-item" href="port-geo-size.html">Quy mô dự án</a></li>
+                                <li><a class="dropdown-item" href="port-geo-tech.html">Công nghệ vận hành</a></li>
 
                             </ul>
                         </li>
@@ -60,7 +60,8 @@
             </div>
         </nav>
 
-        <section class="hero-section">
+        <!-- Hero banner -->
+        <section class="hero-section justify-content-start text-start">
             <div class="hero-background">
                 <img src="../img/final.png" alt="Hạ tầng & Trang thiết bị" class="hero-image">
                 <div class="hero-overlay"></div>
@@ -222,6 +223,9 @@
                 </div>
             </div>
         </section>
+
+        <!-- Line break -->
+        <div class="section-divider-full">   </div>
 
         <!-- What's next -->
         <section class=" section-recommend">
